the big sly 0.4 roundup, may be broken for 0.3
--HG--
rename : assets/be_search.css => assets/css/be_search.css
rename : class/rex_category_select.php => lib/rex/category/select.php
rename : class/rex_select.php => lib/rex/select.php

--- a/static.yml
+++ b/static.yml
@@ -1,4 +1,4 @@
-author: "Markus Staab"
-supportpage: "forum.redaxo.de"
+author: "Markus Staab Christian Zozmann"
+supportpage: "www.sallycms.de"
 extperm: ['be_search[mediapool]','be_search[structure]']
-sally: ["0.3", "0.4"]
+sally: ["0.4"]
