--- a/static.yml
+++ b/static.yml
@@ -1,4 +1,5 @@
-author: "Markus Staab Christian Zozmann"
-supportpage: "www.sallycms.de"
+author: "Markus Staab, Christian Zozmann"
+supportpage: www.sallycms.de
 extperm: ['be_search[mediapool]','be_search[structure]']
-sally: ["0.4", "0.5"]
+sally: ['0.5']
+version: 1.5.3
