refactored for 0.6, removed last rex traces, cleanup

--- a/static.yml
+++ b/static.yml
@@ -1,4 +1,4 @@
-author: "Markus Staab, Christian Zozmann"
-supportpage: www.sallycms.de
-sally: ['0.5']
-version: 1.5.4
+author: webvariants GbR
+supportpage: http://www.sallycms.de/
+sally: ['0.6']
+version: '1.6'
