--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,18 @@
 	"description": "AddOn for SallyCMS, providing enhancements for the backend UI in structure and mediapool views",
 	"authors": [{"name": "webvariants GbR"}],
 	"homepage": "http://www.sallycms.de/",
-	"version": "1.6-dev",
 	"license": "MIT",
 	"type": "sallycms-addon",
 	"require": {
 		"sallycms/composer-installer": "*",
-		"sallycms/sallycms": "0.6,0.7"
+		"sallycms/sallycms": "0.7.*"
 	},
 	"autoload": {
 		"psr-0": {"": "lib/"}
+	},
+	"extra": {
+		"sallycms": {
+			"version": "1.6-dev"
+		}
 	}
 }
