use a branch-alias so users can get the latest, greatest and untagged versions

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
 		"sallycms": {
 			"version": "1.7-dev",
 			"imex-ignore": true
+		},
+		"branch-alias": {
+			"dev-default": "1.7.x-dev"
 		}
 	}
 }
