--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "extra": {
         "sallycms": {
-            "version": "1.7.3",
+            "version": "1.7.x-dev",
             "imex-ignore": true
         },
         "branch-alias": {
